# MFTIQ

./: .gitignore  demo.py  download_model.sh  pyproject.toml  readme.md  run_eval_report.py
configs/: MFTIQ4_FFORMER_200k_cfg.py  MFTIQ4_GMFlowRefine_200k_cfg.py  MFTIQ4_GMFlow_200k_cfg.py  MFTIQ4_LLAFlow_200k_cfg.py  MFTIQ4_MEMFLOWT_200k_cfg.py  MFTIQ4_MEMFLOW_200k_cfg.py  MFTIQ4_MatchFlow_200k_cfg.py  MFTIQ4_NEUFLOW_200k_cfg.py  MFTIQ4_NEUFLOWv2_200k_cfg.py  MFTIQ4_RAFT_200k_cfg.py  MFTIQ4_RAPIDFlow12it_200k_cfg.py  MFTIQ4_ROMA_200k_cfg.py  MFTIQ4_RPKNet_200k_cfg.py  MFTIQ4_SEARAFTM_200k_cfg.py  MFT_cfg.py
configs/flow/: DKM_indoor.py  DKM_outdoor.py  FlowFormerPP_sintel.py  FlowFormerPP_sintel_from_PTLF.py  GMFlow.py  GMFlowRefine.py  LLAFlow.py  MatchFlow.py  MemFlowNet_T_sintel.py  MemFlowNet_sintel.py  NeuFlow_sintel.py  NeuFlow_v2_mixed.py  RAFTou_kubric_huber_split_nonoccl.py  RAPIDFlow_12it.py  RPKNet.py  RoMa_indoor.py  RoMa_outdoor.py  SEARAFT_M_spring.py
dataset_configs/: pkl-robotap-256x256_512x512.py  pkl-tapvid-davis-256x256_512x512.py  pkl-tapvid-kinetics-256x256_512x512.py
datasets/: robotap  tapvid_davis.pkl  tapvid_kinetics
src/MFTIQ/: MFT.py  MFTIQ.py  __init__.py  config.py  dkm.py  flowformer.py  memflow.py  neuflow.py  neuflow_v2.py  point_tracking.py  ptlflow_adapter.py  raft.py  results.py  roma.py  uom.py
src/MFTIQ/DKM/demo/: demo_fundamental.py  demo_match.py
src/MFTIQ/DKM/docs/: api.md
src/MFTIQ/FlowFormerPlusPlus/: evaluate_FlowFormer_tile.py  visualize_flow.py
src/MFTIQ/FlowFormerPlusPlus/configs/: submissions.py
src/MFTIQ/MemFlow/: .gitignore  inference.py
src/MFTIQ/MemFlow/core/: datasets_video.py
src/MFTIQ/MemFlow/inference/: inference_core_predict.py  inference_core_skflow.py  memory_manager_skflow.py
src/MFTIQ/NeuFlow/: eval.py  train.py  write_occ.py
src/MFTIQ/NeuFlow/NeuFlow/: matching.py  neuflow.py
src/MFTIQ/NeuFlow/data_utils/: datasets.py  evaluate.py
src/MFTIQ/NeuFlow_v2/: eval.py  infer.py  train.py
src/MFTIQ/NeuFlow_v2/NeuFlow/: corr.py  matching.py  neuflow.py  refine.py
src/MFTIQ/RAFT/: cache_dataset.py  demo_flow_occl_uncertainty.py  evaluate.py  multiflow_from_kubric.py  train.py  viper_split.txt
src/MFTIQ/RAFT/core/: corr.py  datasets.py  raft.py  raft_orig.py  raft_scf.py
src/MFTIQ/RAFT/experiments/: batch_plotting_graphs_epe_sigma.sh  crop_influence_on_raft_performance.ipynb  histogram_epe_for_raft.ipynb  histogram_epe_for_raft.py  measuring_speed_of_raft.ipynb  measuring_speed_of_raft.py  plotting_epe_sigma_occl_statistics.py  plotting_epe_sigma_occl_statistics_all.py  plotting_epe_sigma_occl_statistics_kubric.py
src/MFTIQ/RAFT/generate_flow_scripts/: convert_flow2images.py  davis2016_generator.py  fbms_generator.py  flow_for_stepan.py  flow_generator.sh  flow_kitti_to_flow_image.py  general_generator.py  kitti_generator.py  sintel_generator.py  tomi_generator.py
src/MFTIQ/RoMa/: README.md
src/MFTIQ/UOM/: create_kubric_data.py  readme.md  train.py
src/MFTIQ/evaluation/: tapvid_eval_stuff.py
src/MFTIQ/runners/: eval_MFT_tapvid.py  run_MFT_tapvid.py
src/MFTIQ/utils/: geom_utils.py  interpolation.py  io.py  misc.py  repro.py  timing.py  vis_utils.py
(+120 files in other folders)
